--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -6,33 +6,34 @@ body {
     background: #fff;
     font-family: 'Open Sans', sans-serif;
     color: #666;
+    margin: 0px;
+    padding: 0px;
 }
 
 #container {
+    border: 1px solid black;
     width: 90%;
     margin: 0 auto;
-
-    border: 1px solid black;
 }
 
 
 .clearfix {
-    content: "";
     clear: both;
+    content: "";
     display: table;
 }
 
 p {
-    font-size: 18px font-weight: 300;
+    font-size: 18px;
+    font-weight: 300;
     line-height: 1.5em;
 }
 
 h1 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    font-family: 'Open Sans', sans-serif;
     font-weight: 600;
     line-height: 0;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 h2 {
@@ -70,7 +71,6 @@ nav ul {
     top: 0;
     margin: 0;
     padding: 0;
-
     list-style-type: none;
 }
 
@@ -163,8 +163,8 @@ footer {
 /* Portfolio Article sections */
 
 .portfolio article {
-    /*  background-color: #000000;
-*/
+    float: left;
+    width: 47%;
 }
 
 .portfolio article img {
@@ -172,8 +172,9 @@ footer {
 }
 
 .portfolio aside {
-    /*  background-color: #7F7F7F
-*/
+    float: right;
+    width: 47%;
+    padding: 20px;
 }
 
 .portfolio hr {
@@ -183,14 +184,8 @@ footer {
 
 /*Skill Set Style*/
 .skillset {
-    float: right;
-    /*    min-height: 400px;
-*/
-    width: 49%;
-    /*;*/
+
     color: #666;
-    /*margin: 0%;*/
-    /*padding: 30px;*/
 }
 
 .skillset ul {
@@ -212,18 +207,7 @@ footer {
     font-weight: 300;
 }
 
-
-
-
-
 .description {
-    float: left;
-    /*    min-height: 400px;
-*/
-    width: 49%;
-    /*    I forgot how much I hate padding and margin
-*/
-    /*margin: 0%;*/
     padding-left: 2%;
     background-color: #ffffff;
     color: #666;
@@ -333,53 +317,128 @@ footer {
     font-weight: 300;
 }
 
+
+
+@media only screen and (max-width: 1024px) {
+
+    .portfolio .hidden {
+        display: none;
+    }
+
+    .portfolio section {
+        width: 50%;
+        float: left;
+
+    }
+
+    .portfolio {
+        width: 100%;
+        /*padding: 10px;*/
+    }
+
+
+    .portfolio article {
+        float: none;
+        width: 100%;
+
+    }
+
+    .portfolio article img {
+        width: 100%;
+    }
+
+    .portfolio aside {
+        float: none;
+        width: auto;
+        padding: 0 20px;
+    }
+
+    .description {
+        padding-left: 0;
+    }
+
+
+
+    .blurb {
+        float: none;
+        width: 50%;
+    }
+
+}
+
 @media only screen and (max-width: 414px) {
-#container {
-    width: 100%;
-    margin: 0 auto;
-    border: none;
-}
+
+     .portfolio .hidden {
+        display: inline-block;
+    }
+
+    #container {
+        width: 100%;
+        margin: 0 auto;
+        border: none;
+    }
+
     header {
-    height: 30px;
-    margin: 0px;
-    padding: 2em 0 1em 0;
-     background-color: #fcfcfc;
-    color: #3F3F3F;
-    text-align: center;
-    text-transform: capitalize;
-}
+        height: 30px;
+        margin: 0px;
+        padding: 2em 0 1em 0;
+        background-color: #fcfcfc;
+        color: #3F3F3F;
+        text-align: center;
+        text-transform: capitalize;
+    }
 
     header h1 {
         font-size: 1.5em;
-        padding:0;
-        margin:0;
+        padding: 0;
+        margin: 0;
     }
 
     #slogan {
-    margin: 0px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: .75em;
-    font-style: italic;
-    font-weight: 100;
-    color: #666;
-    line-height: 2.25em;
-    text-transform: lowercase;
-}
+        margin: 0px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: .75em;
+        font-style: italic;
+        font-weight: 100;
+        color: #666;
+        line-height: 2.25em;
+        text-transform: lowercase;
+    }
 
     hr {
         width: 80%;
     }
 
-    .description {
+    .portfolio {
         width: 100%;
-        padding-left: 0;
-        background-color: #ffffff;
-        color: #666;
+        /*padding: 10px;*/
     }
 
-    .skillset {
+
+    .portfolio article {
+        float: none;
         width: 100%;
-        color: #666;
+
+    }
+
+    .portfolio article img {
+        width: 100%;
+    }
+
+    .portfolio aside {
+        float: none;
+        width: auto;
+        padding: 0 20px;
+    }
+
+    .portfolio section {
+        width: 100%;
+        float: none;
+
+    }
+
+    .description {
+        padding-left: 0;
     }
 
     #resume section {
@@ -396,7 +455,6 @@ footer {
 
     #resume aside {
         float: left;
-
         width: 100%;
         margin-bottom: .5em;
         padding: 0;
@@ -422,8 +480,7 @@ footer {
         padding: 0;
         margin: 0;
         font-weight: 300;
-        /*  background-color: #B4B42D
-*/
+
     }
 
     #resume aside strong {
@@ -442,7 +499,8 @@ footer {
     }
 
     footer {
-   font-size: 14px;
-   }
-
+        font-size: 14px;
+        font-size: 14px;
+    }
 }
+
