--- a/unit_final/css/style.css
+++ b/unit_final/css/style.css
@@ -168,16 +168,19 @@ footer {
 
 .portfolio article {
     /*float: left;*/
-    height: 660px;
-    min-height: 300px;
-    padding: 0 5%;
-    width: 90%;
+    /*    height: 660px;
+*/
+    padding: 0;
+    width: 100%;
 }
 
 .portfolio article img {
-    padding: 5% 0;
+    padding: 0;
     width: 100%;
 }
+
+/*.fullheight {
+}*/
 
 .portfolio aside {
     /*    float: right;*/
@@ -199,8 +202,8 @@ footer {
 .description {
     background-color: #ffffff;
     color: #666;
-    padding: 2%;
-    width: 100%;
+    padding: 5%;
+
 }
 
 /*Skill Set Style*/
@@ -312,6 +315,38 @@ footer {
 }
 
 
+#store {
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/ibooks_store.png"); 
+      background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+#nab1 {
+      background: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/nabi-konnect.jpg");
+      background: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/nabi-konnect.jpg");
+      background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/nabi-konnect.jpg"); 
+      background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#nab2 {
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/nabi-treasure-box.jpg"); 
+      background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
 
 
 @media only screen and (max-width: 1024px) {
@@ -330,12 +365,15 @@ footer {
     }
 
     .portfolio article {
-        min-height: 575px;
-        padding: 0 5%;
+        padding: 0;
     }
 
+    .portfolio article .fullheight {
+  
+  }
+
     .portfolio article img {
-        padding:10% 0;
+        padding: 10% 0;
         width: 100%;
     }
 
@@ -346,8 +384,8 @@ footer {
     }
 
     .description {
-        height: 600px;
-    }
+/*        height: 600px;
+*/    }
 
     .blurb {
         padding: 0 5%;
@@ -358,14 +396,12 @@ footer {
         padding: 0 5%;
         width: 90%;
     }
-
-
 }
 
 @media only screen and (max-width: 414px) {
 
     .portfolio .hidden {
-        display: inline-block;
+        display: none;
     }
 
     #container {
@@ -413,8 +449,12 @@ footer {
 
     .portfolio article {
         float: none;
-        width: 100%;
-    }
+/*        width: 100%;
+*/    }
+
+    .portfolio article .fullheight {
+  
+  }
 
     .portfolio article img {
         width: 100%;
@@ -474,9 +514,6 @@ footer {
         font-weight: 300;
         margin: 0;
         padding: 0;
-
-
-
     }
 
     #resume aside strong {
